--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,13 +14,13 @@
     "**/bower_components": true
   },
   "search.exclude": {},
-  "git.enabled": false,
+  "git.enabled": true,
   "telemetry.enableCrashReporter": false,
   "telemetry.enableTelemetry": false,
   "typescript.surveys.enabled": false,
   "editor.roundedSelection": false,
   "editor.wordWrap": "off",
-  "editor.quickSuggestions": false,
+  "editor.quickSuggestions": true,
   "editor.autoClosingBrackets": "never",
   "editor.scrollBeyondLastLine": false,
   "editor.formatOnType": false,
