--- a/tsconfigs/tsconfig-es7-es2016.json
+++ b/tsconfigs/tsconfig-es7-es2016.json
@@ -20,8 +20,8 @@
       "@transform/*": [
         "src/transform/*"
       ],
-      "@r2-utils-js/*": [
-        "node_modules/r2-utils-js/dist/es7-es2016/src/*"
+      "@r2-utils-rn/*": [
+        "node_modules/r2-utils-rn/dist/es7-es2016/src/*"
       ]
     }
   }
